# ChirpR

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MIGRATION_PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  config.toml
installer/: ChirpR.Installer.wixproj  ChirpRSetup.nsi  License.rtf  Product.wxs  Uninstall.ps1
scripts/: build-release.ps1
src/: app.rs  audio.rs  audio_feedback.rs  autostart.rs  cli.rs  config.rs  dev.rs  keyboard.rs  lib.rs  logger.rs  main.rs  recording.rs  recording_overlay.rs  settings.rs  singleton.rs  text_injection.rs  text_processing.rs
src/settings_ui/: index.html  settings.css  settings.js
src/stt/: parakeet.rs
