[package]
name = "chirp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
enigo = "0.2"
hound = "3.5"
ndarray = "0.17"
ort = "2.0.0-rc.12"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking"] }
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_GdiPlus", "Win32_Media_Audio", "Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_UI_HiDpi", "Win32_UI_WindowsAndMessaging"] }
