[package]
name = "chirpr"
version = "0.2.3"
edition = "2024"

[lib]
name = "chirp_rust"

[[bin]]
name = "chirpr-cli"
path = "src/main.rs"

[[bin]]
name = "chirpr"
path = "src/bin/chirpr.rs"

[[bin]]
name = "chirpr-indicator-gallery"
path = "src/bin/chirpr_indicator_gallery.rs"

[dependencies]
anyhow = "1.0"
arboard = "3.6"
clap = { version = "4.5", features = ["derive"] }
cpal = "0.16"
enigo = "0.2"
hound = "3.5"
ndarray = "0.17"
ort = "2.0.0-rc.12"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking"] }
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Graphics_GdiPlus", "Win32_Media_Audio", "Win32_Security", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics_ToolHelp", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_UI_HiDpi", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
